--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username: KhaledEssam
 
 # Email and twitter are optional:
 email:
-twitter_username: @_IChaled_
+twitter_username: _IChaled_
 
 # Set this to true to get LaTeX math equation support
 use_math:
